--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,16 @@ h3,
     background-position: center;
 }
 
+.jumbotron_accesibilidad {
+    padding: 150px 40px 100px 40px;
+    text-align: center;
+    background:
+            linear-gradient(rgba(244, 247, 252, 0.7), rgba(244, 247, 252, 0.7)),
+            url("../images/banners/accesibilidad.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
 .jumbotron_cookies {
     padding: 150px 40px 100px 40px;
     text-align: center;
