Corrección de algunos pequeños errores de diseño en accesibilidad.html, politica-coockies.html e index.html

--- a/css/my.css
+++ b/css/my.css
@@ -142,6 +142,13 @@
     background-color: #004085 !important;
 }
 
+.portfolio-link {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+
+
 /* ============================================
    BANNER DE COOKIES
    ============================================ */
